chore: update highlight.js, add smarty highlighting, change markdown styling, fix code block horizontal scrolling

--- a/src/Templates/Styles/style.css
+++ b/src/Templates/Styles/style.css
@@ -549,7 +549,8 @@ section {
 
 pre code {
     background: #eeeeee;
-    display: block;
+    display: inline-block;
+    min-width: 100%;
     padding: 15px;
     margin: var(--gutterDefault) 0px;
 }
